[package]
name = "cookie-delete-filter"
authors = ["hihellobolke <g@ut.am>"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
proxy-wasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = "debuginfo"
